--- a/pages/accommodations/update-provider.mdx
+++ b/pages/accommodations/update-provider.mdx
@@ -3,30 +3,28 @@ import Protocol from "../../components/protocol";
 
 # Update an accommodation
 
-This endpoint allows you to perform an update on an accommodation by providing the accommodation `id` or `slug`.
+This endpoint allows you to perform an update on an accommodation by providing the accommodation `id`.
 
 ## Request
 
 <Protocol method="PUT" path="/v1/accommodations/{accommodation}" />
-<Protocol method="PATCH" path="/v1/accommodations/{accommodation}" />
 
 <Tabs items={['cURL', 'PHP']}>
   <Tabs.Tab>
     [//]: # (@formatter:off)
     ```bash copy
-    curl -X PUT https://api.sandbox.ntak.guru/v1/accommodations/rqdsw \
+    curl -X PUT https://api.ntak.guru/v1/accommodations/99845d23-7ffb-4267-85ef-c8d4ac70e46a \
       -H "Authorization: Bearer {token}" \
       -H "Accept: application/json" \
       -H "Content-Type: application/json" \
-      -d '{"providerName": "New Provider Ltd.", "providerTaxNumber": "12345678-1-12", "dailyCloseUrl": "https://example.com/daily-close", "callbackUrl": "https://example.com/callback"}'
-
+      -d '{"providerName": "New Provider Ltd.", "providerTaxNumber": "12345678-1-12"}'
     ```
     [//]: # (@formatter:on)
   </Tabs.Tab>
   <Tabs.Tab>
     [//]: # (@formatter:off)
     ```php copy
-    use TmrwLife\NtakGuru\Entities\Accommodation as AccommodationEntity;
+    use TmrwLife\NtakGuru\Entities\AccommodationProvider;
     use TmrwLife\NtakGuru\Services\Accommodation;
 
     $gateway = Accommodation::setup([
@@ -34,13 +32,11 @@ This endpoint allows you to perform an update on an accommodation by providing t
       'isProduction' => false, // default: false
     ]);
 
-    $accommodation = (new AccommodationEntity())
+    $accommodation = (new AccommodationProvider())
       ->setProviderName('New Provider Ltd.')
-      ->setProviderTaxNumber('12345678-1-12')
-      ->setCallbackUrl('https://example.com/callback')
-      ->setDailyCloseUrl('https://example.com/daily-close');
+      ->setProviderTaxNumber('12345678-1-12');
 
-    $response = $gateway->update('rqdsw', $accommodation);
+    $response = $gateway->update('99845d23-7ffb-4267-85ef-c8d4ac70e46a', $accommodation);
     ```
     [//]: # (@formatter:on)
   </Tabs.Tab>
@@ -49,26 +45,22 @@ This endpoint allows you to perform an update on an accommodation by providing t
 ### URL Parameters
 
 | Name            | Description                      |
-|-----------------|----------------------------------|
+|:----------------|:---------------------------------|
 | `accommodation` | The accommodation `id` or `slug` |
 
 ### Request Body
 
 | Name                |        Type        | Description                                                                    | Required |
-|---------------------|:------------------:|--------------------------------------------------------------------------------|:--------:|
+|:--------------------|:------------------:|:-------------------------------------------------------------------------------|:--------:|
 | `providerName`      |      `string`      | The name of the accommodation provider.                                        |   Yes    |
 | `providerTaxNumber` |      `string`      | The tax number of the accommodation provider.                                  |   Yes    |
-| `dailyCloseUrl`     |      `string`      | PMS endpoint where NTAK.guru will fetches the data for the daily close report. |   Yes    |
-| `callbackUrl`       | `string` or `null` | PMS endpoint where NTAK.guru sends the webhook.                                |    No    |
 
 #### Example
 
 ```json
 {
   "providerName": "New Provider Ltd.",
-  "providerTaxNumber": "12345678-1-12",
-  "dailyCloseUrl": "https://hotelcalifornia.com/api/daily-close",
-  "callbackUrl": "https://hotelcalifornia.com/api/ntak-guru"
+  "providerTaxNumber": "12345678-1-12"
 }
 ```
 
@@ -77,7 +69,7 @@ This endpoint allows you to perform an update on an accommodation by providing t
 <Tabs items={[200, 401, 403, 404, 422]}>
   <Tabs.Tab>
     <Callout type="info" emoji="ℹ️">
-      Read more about the accommodation object in the [Terminology](/terminology/accommodation).
+      Read more about the accommodation object on [this page](/accommodations).
     </Callout>
     [//]: # (@formatter:off)
     ```json copy
@@ -140,20 +132,13 @@ This endpoint allows you to perform an update on an accommodation by providing t
     [//]: # (@formatter:off)
     ```json copy
     {
-      "message": "The provider name field is required. (and 3 more errors)",
+      "message": "The provider name field is required. (and 1 more error)",
       "errors": {
         "providerName": [
           "The provider name field is required."
         ],
         "providerTaxNumber": [
           "The provider tax number field is required."
-        ],
-        "callbackUrl": [
-          "The daily close url field is required.",
-          "The daily close url must be a valid URL."
-        ],
-        "callbackUrl": [
-          "The callback url must be a valid URL."
         ]
       }
     }
